<resources>
    <string name="app_name">Razvii_pt9</string>
    <string name="simple_notification">Simple notification</string>
    <string name="notification_with_button">Notification with button</string>
    <string name="notification_with_reply">Notification with reply</string>
    <string name="notification_with_progress">Notification with progress</string>
    <string name="open_new_activity">Open new Activity</string>
    <string name="open_maps">Open Maps</string>
    <string name="send_to_broadcastreceiver">Send to BroadcastReceiver</string>
    <string name="number_from_mainactivity">Number from MainActivity: </string>
    <string name="text_from_mainactivity">Text from MainActivity: </string>
</resources>